test/corpus/comments.txt
================================================================================
Comments
================================================================================

1 + 2
// 1 + 2
/* very
  /* nested
     /* comment */
  goes
  */ 
  here
*/
// "strings are cool too"
/* even """multiline strings""" */

--------------------------------------------------------------------------------

(source_file
  (additive_expression
    (decimal_integer_literal)
    (decimal_integer_literal))
  (line_comment)
  (multiline_comment)
  (line_comment)
  (multiline_comment))
